# cncrypto

./: .gitignore  CMakeLists.txt  README.md
src/crypto/: CMakeLists.txt  crypto.cpp  crypto.h  hash-ops.h  hash.h
tests/crypto/: CMakeLists.txt  crypto-tests.h  crypto.cpp  crypto_2p.cpp  crypto_3p.cpp
